fix header blur on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -129,7 +129,8 @@ h3 {
   justify-content: center;  
   padding: 16px 32px;
   background: rgba(255, 255, 255, 0.50);
-  backdrop-filter: blur(16px);
+  backdrop-filter: blur(16px)!important;
+  -webkit-backdrop-filter: blur(16px)!important;
   z-index: 2;
 }
 
@@ -336,6 +337,8 @@ h3 {
 .full-width-section {
   display: flex;
   align-items: center;
+  max-width: 1920px;
+  gap: 10%;
 }
 
 .full-width-section .section-image {
@@ -345,7 +348,8 @@ h3 {
 }
 
 .full-width-section .section-text {
-  flex: 1 0 60%;
+  box-sizing: border-box;
+  flex: 1 0 50%;
   display: flex;
   padding-right: 15%;
   flex-direction: column;
@@ -487,6 +491,12 @@ h3 {
   .hero-section, .footer {
     width: 100%;
     padding: 0 32px;
+  }
+  .full-width-section {
+    gap: 0;
+  }
+  .full-width-section .section-text {
+    flex: 1 0 60%;
   }
 }
 
